--- a/Style/pricing.css
+++ b/Style/pricing.css
@@ -1,7 +1,7 @@
 /*pricing*/
 .pricing-color {
    background-color: #F5F5F5;
-   width: 1480px;
+
 }
 
 .pricing-blok {
@@ -62,4 +62,17 @@
 .pricing-blok__basic:hover, .pricing-blok__pro:hover, .pricing-blok__optima-active:hover {
    transform: translate3d(0, -20px, 0);   
    filter: drop-shadow(0px 4px 10px rgba(51, 51, 51, 0.2));
+}
+
+.pricing-blok_spce-link {
+   text-decoration: none;
+   color: #86878B;
+
+}
+
+.pricing-blok_spce-link:hover {
+   color: #F38281;
+   font-size: 20px;
+   font-weight: bold;
+   
 }
