--- a/Style/awesome.css
+++ b/Style/awesome.css
@@ -36,6 +36,7 @@
       display: flex;
       text-align: center;
       justify-content: space-around;
+      margin-bottom: 60px;
    }
    
    .awesome__blok-title {
@@ -48,4 +49,69 @@
    .awesome__block-text {
       width: 370px;
       line-height: 21px;
+   }
+
+   @media (max-width: 1023px) {
+      .sup-container__text {
+         width: 100%;
+      }
+      
+      .awesome__title {
+         padding-top: 48px;
+         font-size: 24px;
+         
+      }
+
+      .awesome__text {
+         font-size: 14px;
+         margin-bottom: 65px;
+      }
+      
+      .awesome__blok-text{
+         width: 318px;
+      }
+
+      .awesome__block-text {
+         width: 100%;
+         line-height: 21px;
+         font-size: 14px;
+      }
+
+      .awesome__blok-title {
+         width: 100%;
+         padding: 32px 0;
+         margin-top: 33px;
+         font-family: 'Open Sans';
+         font-size: 24px;
+         font-weight: 700;
+      }
+
+      .awesome__blok-icon img {
+         width: 72px;
+         height: 72px;
+      }
+   }
+
+   @media (max-width: 375px) {
+      .sup-container__text {
+         width: 100%;
+         margin: 0 16px;
+      }
+
+      .awesome__blok {
+         display: flex;
+         /*flex-direction: column;*/
+         flex-wrap: wrap;
+         margin: 83px 16px 0 16px;
+      }
+
+      .awesome__blok-text {
+         margin-bottom: 43px;
+      }
+
+      .awesome__text {
+         width: 288px;
+         margin-left: 16px;
+      }
+
    }
