--- a/Style/social.css
+++ b/Style/social.css
@@ -32,3 +32,82 @@
    width: 70px;
    height: 70px;
 }
+
+@media (max-width: 1023px) {
+   .social__container {
+      margin-left: 16px;
+   }
+
+   .social__icon-item {
+      padding: 0;
+   }
+
+   .social__icon-item img {
+      padding: 0;
+      margin-left: 20px;
+      width: 55px;
+      height: 55px;
+   }
+
+   .social__title {
+      font-size: 18px;
+   }
+
+   .block-text {
+      width: 402px;
+      padding: 0;
+      
+   }
+
+   .social__text {
+      font-size: 14px;
+      color: #86878B;
+   }
+
+   .social_blok {
+      padding-bottom: 13px;
+      margin-bottom: 0;
+
+   }
+   .social_back {
+      height: auto;
+   }
+}
+
+@media (max-width: 375px) {
+
+   .social_blok {
+      flex-direction: column;
+      
+   }
+
+   .social_back {
+      height: 239px;
+   }
+
+   .block-text {
+      width: 270px;
+
+   }
+
+   .social__icon{
+      margin-top: 35px;
+      width: 320px;
+   }
+   .social__icon-item img {
+      padding: 0;
+      margin-left: 20px;
+      width: 20px;
+      height: 20px;
+      
+   }
+
+   .social__text {
+      text-align: center;
+   }
+
+   .social__title {
+      text-align: center;
+   }
+
+}
